[package]
name = "RustServer"
version = "0.1.0"
authors = ["Admin <faheemuzzaman@hotmail.com>"]
edition = "2018"

[dependencies]
rocket = "^0.4.4"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
dotenv = "^0.14.1"
reqwest = "^0.9.19"
rocket_cors = "^0.5.0"
lazy_static = "^1.4.0"



[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates", "json"]
